kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluxcd-http-echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "fluxcd.domain-to-test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fluxcd-http-echo-service
            port:
              number: 5678
